Fix css: auto scroll -y if content overflows

--- a/src/tagsinput.less
+++ b/src/tagsinput.less
@@ -8,7 +8,7 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 
   [data-role=tags] {
-    overflow: hidden;
+    overflow-y: auto;
     margin: 2px 6px 4px;
 
     & [data-role=tag] {
